--- a/src/assets/styles/Project.scss
+++ b/src/assets/styles/Project.scss
@@ -1,6 +1,3 @@
-.project-chips {
-  margin-top: 1rem;
-}
 
 .projects-container {
     display: flex;
@@ -35,8 +32,19 @@
 
 .project-chips {
   margin-top: auto;
+  min-height: 76px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: center;
+  gap: 8px 10px;
+  line-height: normal;
 }
-  
+
+.project-chips .MuiChip-root {
+  margin-right: 0;
+}
+
 .project h2:hover {
     text-decoration: underline;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
